src/ui/readarr_ui/system/snapshots/managarr__ui__readarr_ui__system__system_ui_tests__tests__snapshot_tests__popups_over_system_ui_SystemUpdates.snap
---
source: src/ui/readarr_ui/system/system_ui_tests.rs
expression: output
---
╭  Tasks  ────────────────────────────────────────────────────────────────────────╮╭  Queued Events  ───────────────────────────────────────────────────────────────╮
│Name                   Interval            Last Execution     Next Execution     ││Trigger    Status      Name                Queued        Started     Duration   │
│Backup task            2 hours             30 minutes ago     1 hour             ││manual     completed   queued event one    1 hour ago    30 minutes  00:29:14   │
│Rss sync task          15 minutes          8 minutes ago      3 minutes          ││scheduled  started     queued event two    15 minutes ag 4 minutes a 01:02:03   │
│Housekeeping task      1 day               4 hours ago        18 hours           ││external   queued      queued event three  1 minute ago                         │
│                                                                                 ││                                                                                │
│                   ╭  Updates  ───────────────────────────────────────────────────────────────────────────────────────────────────────────────╮                    │
│                   │The latest version of Sonarr is already installed                                                                         │                    │
│                   │                                                                                                                          │                    │
│                   │4.3.2.1 - 2023-04-15 02:02:53 UTC (Currently Installed)                                                                   │                    │
│                   │--------------------------------------------------------------------------------------------------------------------------│                    │
│                   │New:                                                                                                                      │                    │
│                   │  * Cool new thing                                                                                                        │                    │
│                   │Fixed:                                                                                                                    │                    │
│                   │  * Some bugs killed                                                                                                      │                    │
│                   │                                                                                                                          │                    │
│                   │                                                                                                                          │                    │
│                   │3.2.1.0 - 2023-04-15 02:02:53 UTC (Previously Installed)                                                                  │                    │
│                   │--------------------------------------------------------------------------------------------------------------------------│                    │
│                   │New:                                                                                                                      │                    │
│                   │  * Cool new thing (old)                                                                                                  │                    │
│                   │  * Other cool new thing (old)                                                                                            │                    │
│                   │                                                                                                                          │                    │
│                   │                                                                                                                          │                    │
╰───────────────────│2.1.0 - 2023-04-15 02:02:53 UTC                                                                                           │────────────────────╯
╭  Logs  ───────────│--------------------------------------------------------------------------------------------------------------------------│────────────────────╮
│2025-12-16 16:40:59│Fixed:                                                                                                                    │                    │
│2025-12-16 16:41:12│  * Killed bug 1                                                                                                          │                    │
│2025-12-16 16:41:30│  * Fixed bug 2                                                                                                           │                    │
│                   │                                                                                                                          │                    │
│                   │                                                                                                                          │                    │
│                   │                                                                                                                          │                    │
│                   │                                                                                                                          │                    │
│                   │                                                                                                                          │                    │
│                   │                                                                                                                          │                    │
│                   │                                                                                                                          │                    │
│                   │                                                                                                                          │                    │
│                   │                                                                                                                          │                    │
│                   │                                                                                                                          │                    │
│                   │                                                                                                                          │                    │
│                   │                                                                                                                          │                    │
│                   │                                                                                                                          │                    │
│                   │                                                                                                                          │                    │
│                   ╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯                    │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
╰───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
